# Earthquake_Data_Pipeline

./: .gitignore  README.md  pyproject.toml
src/: aggregator.py  api.py  config.py  earthquakes.json  gcs_uploader.py  main.py
